# SnakeGame

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  entities.cpp  entities.hpp  game.cpp  game.hpp  main.cpp
